examples/test/testpolicy15528.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15528
  namespace: namespace408
spec:
  podSelector:
    matchLabels:
      key11: value21
      key39: value23
      key6: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value44
      podSelector:
        matchLabels:
          key7: value49
